--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "appwrite": "^14.0.1",
+    "framer-motion": "^12.16.0",
     "hamburger-react": "^2.5.2",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
